--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,11 @@ jobs:
 
       - run: |
           output=$(python auto_report.py v2.21)
-          output="${output//'%'/'%25'}"
-          output="${output//$'\n'/'%0A'}"
-          output="${output//$'\r'/'%0D'}" 
-          echo "::set-output name=changelog::$output"
+          outputResult="${output//'%'/'%25'}"
+          outputResult="${output//$'\n'/'%0A'}"
+          outputResult="${output//$'\r'/'%0D'}" 
+          echo "::set-output name=changelog::$outputResult"
+          values =changelog
         id: step1
       - name: Print changelog
         run: echo "${{ steps.step1.outputs.changelog }}"
@@ -33,4 +34,4 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: POST
-          payload: '{"content": ""${{ steps.step1.outputs.changelog }}""}'
+          payload: '{"content": ""${{ steps.step1.output }}""}'
