--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: POST
-          payload: '{"content": "${{ steps.step1.outputResult }}"}'
+          payload: '{"content": "${{ steps.step1.outputs.changelog }}"}'
