--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,10 @@ jobs:
 
       - run: |
           output=$(python auto_report.py v2.21)
-          outputResult="${output//'%'/'%25'}"
-          outputResult="${output//$'\n'/'%0A'}"
-          outputResult="${output//$'\r'/'%0D'}" 
-          echo "::set-output name=changelog::$outputResult"
+          output="${output//'%'/'%25'}"
+          output="${output//$'\n'/'%0A'}"
+          output="${output//$'\r'/'%0D'}" 
+          echo "::set-output name=changelog::$output"
         id: step1
       - name: Print changelog
         run: echo "${{ steps.step1.outputs.changelog }}"
