--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           output="${output//'%'/'%25'}"
           output="${output//$'\n'/'%0A'}"
           output="${output//$'\r'/'%0D'}" 
-          echo "::set-output name=changelog::$output"
+          echo "::set-output name=changelog::output::$(ls -l)"
         id: step1
       - name: Print changelog
         run: echo "${{ steps.step1.outputs.changelog }}"
