--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           output="${output//$'\n'/'%0A'}"
           output="${output//$'\r'/'%0D'}" 
           echo "::set-output name=changelog::$output"
-          set-output name=logOut::'${{ steps.step1.outputs.changelog }}'
+          ::set-output name=logOut::'${{ steps.step1.outputs.changelog }}'
         id: step1
       - name: Print changelog
         run: echo "${{ steps.step1.outputs.changelog }}"
