--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,9 @@ jobs:
           output="${output//'%'/'%25'}"
           output="${output//$'\n'/'%0A'}"
           output="${output//$'\r'/'%0D'}" 
+          output="${output//$'\n'/\\n}"
+          output="${output// / }"
           echo "::set-output name=changelog::$output"
-          echo "::set-output name=logOut::'${{ steps.step1.outputs.changelog }}'"
         id: step1
       - name: Print changelog
         run: echo "${{ steps.step1.outputs.changelog }}"
