--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
-          data: '{"content": "${{ steps.step1.outputs.logOut }}"}'
+          data: '{"content": "${{ steps.step1.outputs.changelog }}"}'
