--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
+          pip install pandas
+          pip install sklearn
+          pip install numpy
+          
       - run: |
           output=$(python auto_report.py v2.21)
           output="${output//$'\n'/\\n}"
