--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
-          data: '{"content": ":point_right: A1 Correclation Matrix :point_left: \n ${{ steps.step1.outputs.changelog }}"}'
+          data: '{"content": ":point_right: :one:  :point_left: \n ${{ steps.step1.outputs.changelog }}"}'
       - run: |
           output=$(python auto_report_a2.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -59,7 +59,7 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
-          data: '{"content": ":point_right: A2 Correclation Matrix - Self Test :point_left: \n  ${{ steps.step2.outputs.changelog }}"}'
+          data: '{"content": ":point_right: :two: :point_left: \n  ${{ steps.step2.outputs.changelog }}"}'
       - run: |
           output=$(python auto_report_a3.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -70,7 +70,7 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
-          data: '{"content": ":point_right: A3 Correclation Matrix Kfold :point_left: \n ${{ steps.step3.outputs.changelog }}"}'
+          data: '{"content": ":point_right: :three: \n ${{ steps.step3.outputs.changelog }}"}'
       - run: |
           output=$(python auto_report_a4.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -81,7 +81,7 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
-          data: '{"content": ":point_right: A4 Correclation Matrix Kfold - Self Test\n ${{ steps.step4.outputs.changelog }}"}'
+          data: '{"content": ":point_right: :four: :point_left: \n ${{ steps.step4.outputs.changelog }}"}'
       - run: |
           output=$(python auto_report_a5.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -92,7 +92,7 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
-          data: '{"content": ":point_right: A5 KFold SVM :point_left: \n ${{ steps.step5.outputs.changelog }}"}'
+          data: '{"content": ":point_right: :five:  :point_left: \n ${{ steps.step5.outputs.changelog }}"}'
       - run: |
           output=$(python auto_report_a6.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -103,7 +103,7 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
-          data: '{"content": ":point_right: A6 KFold SVM - Self Test :point_left: \n ${{ steps.step6.outputs.changelog }}"}'
+          data: '{"content": ":point_right: :six: :point_left: \n ${{ steps.step6.outputs.changelog }}"}'
       - run: |
           output=$(python auto_report_a7.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -114,7 +114,7 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
-          data: '{"content": ":point_right: A7 Correclation SVM :point_left: \n ${{ steps.step7.outputs.changelog }}"}'
+          data: '{"content": ":point_right: :seven: :point_left: \n ${{ steps.step7.outputs.changelog }}"}'
       - run: |
           output=$(python auto_report_a8.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -125,9 +125,19 @@ jobs:
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
-          data: '{"content": ":point_right: A8 Correclation SVM - Self Test :point_left: \n ${{ steps.step8.outputs.changelog }}"}'
+          data: '{"content": ":point_right: :eight: :point_left: \n ${{ steps.step8.outputs.changelog }}"}'
+      - uses: fjogeleit/http-request-action@master
+        with:
+          url: ${{ secrets.DISCORD_KEY_REPORT }}
+          method: 'POST'
+          data: '{"content": " :flag_vn: :flag_vn:  :flag_vn: :flag_vn:  :flag_vn: :flag_vn: "}'
       - uses: fjogeleit/http-request-action@master
         with:
           url: ${{ secrets.DISCORD_KEY_REPORT }}
           method: 'POST'
           data: '{"content": ":dart: That is all! Please analysis your results!"}'
+      - uses: fjogeleit/http-request-action@master
+        with:
+          url: ${{ secrets.DISCORD_KEY_REPORT }}
+          method: 'POST'
+          data: '{"content": " :flag_vn: :flag_vn:  :flag_vn: :flag_vn:  :flag_vn: :flag_vn: "}'
