Update print console

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -41,7 +41,7 @@ jobs:
           echo "::set-output name=changelog::$output"
         id: step1
       - run: |
-          echo ${{ steps.step1.outputs.changelog }}
+          echo '${{ steps.step1.outputs.changelog }}'
       - run: |
           output=$(python auto_report_a2.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -49,7 +49,7 @@ jobs:
           echo "::set-output name=changelog::$output"
         id: step2
       - run: |
-          echo ${{ steps.step2.outputs.changelog }}
+          echo '${{ steps.step2.outputs.changelog }}'
       - run: |
           output=$(python auto_report_a3.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -57,7 +57,7 @@ jobs:
           echo "::set-output name=changelog::$output"
         id: step3
       - run: |
-          echo ${{ steps.step3.outputs.changelog }}
+          echo '${{ steps.step3.outputs.changelog }}'
       - run: |
           output=$(python auto_report_a4.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -65,7 +65,7 @@ jobs:
           echo "::set-output name=changelog::$output"
         id: step4
       - run: |
-          echo ${{ steps.step4.outputs.changelog }}
+          echo '${{ steps.step4.outputs.changelog }}'
       - run: |
           output=$(python auto_report_a5.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -73,7 +73,7 @@ jobs:
           echo "::set-output name=changelog::$output"
         id: step5
       - run: |
-          echo ${{ steps.step5.outputs.changelog }}
+          echo '${{ steps.step5.outputs.changelog }}'
       - run: |
           output=$(python auto_report_a6.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -81,7 +81,7 @@ jobs:
           echo "::set-output name=changelog::$output"
         id: step6
       - run: |
-          echo ${{ steps.step6.outputs.changelog }}
+          echo '${{ steps.step6.outputs.changelog }}'
       - run: |
           output=$(python auto_report_a7.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -89,7 +89,7 @@ jobs:
           echo "::set-output name=changelog::$output"
         id: step7
       - run: |
-          echo ${{ steps.step7.outputs.changelog }}
+          echo '${{ steps.step7.outputs.changelog }}'
       - run: |
           output=$(python auto_report_a8.py v2.21)
           output="${output//$'\n'/\\n}"
@@ -97,4 +97,4 @@ jobs:
           echo "::set-output name=changelog::$output"
         id: step8
       - run: |
-          echo ${{ steps.step6.outputs.changelog }}
+          echo '${{ steps.step6.outputs.changelog }}'
